--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
+include README.rst
 recursive-include filer_gallery/templates *
 recursive-include filer_gallery/locale *
 recursive-include filer_gallery/static *
